@@ -1,162 +1,0 @@
-return {
-	talon_bulwark = {
-		acceleration = 0,
-		activatewhenbuilt = true,
-		airsightdistance = 1200,
-		brakerate = 0,
-		buildcostenergy = 245000,
-		buildcostmetal = 11800,
-		builder = false,
-		buildinggrounddecaldecayspeed = 30,
-		buildinggrounddecalsizex = 8,
-		buildinggrounddecalsizey = 8,
-		buildinggrounddecaltype = "talon_bulwark_aoplane.dds",
-		buildpic = "talon_bulwark.dds",
-		buildtime = 155000,
-		canattack = true,
-		canstop = 1,
-		category = "ALL NOTHOVERNOTVTOL NOTMOBILE NOTSUB NOTSUBNOTSHIP NOTVTOL WEAPON SURFACE",
-		corpse = "dead",
-		damagemodifier = 0.5,		
-		defaultmissiontype = "GUARD_NOMOVE",
-		description = "Pop-up Long-Range Missile Tower",
-		energyuse = 0,
-		explodeas = "BIG_UNITEX",
-		firestandorders = 1,
-		footprintx = 5,
-		footprintz = 5,
-		icontype = "building",
-		idleautoheal = 5,
-		idletime = 1800,
-		losemitheight = 35,
-		mass = 1813,
-		maxdamage = 7500,
-		maxslope = 20,
-		maxvelocity = 0,
-		maxwaterdepth = 0,
-		name = "talon_bulwark",
-		noautofire = false,
-		nochasecategory = "ALL",
-		objectname = "talon_bulwark",
-		onoffable = false,
-		radaremitheight = 35,
-		seismicsignature = 0,
-		selfdestructas = "BIG_UNIT",
-		sightdistance = 700,
-		standingfireorder = 2,
-		turninplaceanglelimit = 140,
-		turninplacespeedlimit = 0,
-		turnrate = 0,
-		unitname = "talon_bulwark",
-		usebuildinggrounddecal = true,
-		yardmap = "oooooooo oooooooo oooooooo oooooooo oooooooo oooooooo oooooooo oooooooo",
-		customparams = {
-			buildpic = "talon_bulwark.png",
-			faction = "CORE",
-		},
-		featuredefs = {
-			dead = {
-				blocking = true,
-				collisionvolumeoffsets = "0.0 3.23730468743e-05 -6.73623657227",
-				collisionvolumescales = "74.8988952637 49.1488647461 67.5134277344",
-				collisionvolumetype = "Box",
-				damage = 3606,
-				description = "Bulwark Wreckage",
-				energy = 0,
-				featuredead = "heap",
-				footprintx = 4,
-				footprintz = 4,
-				metal = 1359,
-				object = "talon_bulwark_DEAD",
-				reclaimable = true,
-			},
-			heap = {
-				blocking = false,
-				damage = 4507,
-				description = "talon_bulwark Debris",
-				energy = 0,
-				footprintx = 4,
-				footprintz = 4,
-				metal = 725,
-				object = "4X4A",
-				reclaimable = true,
-			},
-		},
-		sfxtypes = {
-			pieceexplosiongenerators = {
-				[1] = "piecetrail0",
-				[2] = "piecetrail1",
-				[3] = "piecetrail2",
-				[4] = "piecetrail3",
-				[5] = "piecetrail4",
-				[6] = "piecetrail6",
-			},
-		},
-		sounds = {
-			activate = "targon2",
-			canceldestruct = "cancel2",
-			deactivate = "targoff2",
-			underattack = "warning1",
-			working = "targsel2",
-			count = {
-				[1] = "count6",
-				[2] = "count5",
-				[3] = "count4",
-				[4] = "count3",
-				[5] = "count2",
-				[6] = "count1",
-			},
-			select = {
-				[1] = "targsel2",
-			},
-		},
-		weapondefs = {
-			arm_advsam = {
-				areaofeffect = 292,
-				avoidfeature = false,
-				canattackground = false,
-				craterareaofeffect = 0,
-				craterboost = 0,
-				cratermult = 0,
-				edgeeffectiveness = 0.25,
-				explosiongenerator = "custom:FLASHSMALLBUILDINGEX",
-				firestarter = 70,
-				impulseboost = 0.123,
-				impulsefactor = 0.123,
-				model = "ADVSAM",
-				name = "ADVSAM",
-				noselfdamage = true,
-				proximitypriority = -1,
-				range = 2100,
-				reloadtime = 0.35,
-				smoketrail = true,
-				soundhitdry = "impact",
-				soundstart = "launch",
-				startvelocity = 1000,
-				texture2 = "armsmoketrail",
-				tolerance = 90000,
-				tracks = true,
-				turnrate = 25000,
-				turret = true,
-				weaponacceleration = 500,
-				weapontype = "StarburstLauncher",
-				weaponvelocity = 2000,
-				damage = {
-					bombers = 1750,
-					default = 5,
-					fighters = 1750,
-					flak_resistant = 1500,
-					unclassed_air = 1750,
-				},
-			},
-		},
-		weapons = {
-			[1] = {
-				badtargetcategory = "SMALLVTOL TINYVTOL",
-				def = "ARM_ADVSAM",
-				onlytargetcategory = "VTOL",
-			},
-			
-		},
-	},
-}
