@@ -54,7 +54,7 @@ return {
 			faction = "TLL",
 			shield_emit_height = 54.8,
 			shield_emit_offset = -9.37,
-			shield_power = 2600,
+			shield_power = 3000,
 			shield_radius = 250,		
 		},
 		featuredefs = {
@@ -167,8 +167,8 @@ return {
 				weapontype = "Cannon",
 				weaponvelocity = 525,
 				damage = {
-					commanders = 40,
-					default = 80,
+					commanders = 37.5,
+					default = 75,
 					subs = 5,
 				},
 			},
@@ -183,7 +183,7 @@ return {
 				shieldgoodcolor = "0.2 1 0.2 0.30",
 				shieldintercepttype = 1,
 				shieldmaxspeed = 200,
-				shieldpower = 2600,
+				shieldpower = 3000,
 				shieldpowerregen = 29,
 				shieldpowerregenenergy = 260.5,
 				shieldradius = 250,
